<resources>
    <string name="app_name">Journal</string>
    <string name="title_activity_left_menu">LeftMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="communicate">Communicate</string>
    <string name="creare_cont">Creare cont</string>
    <string name="ad_ugare_c_l_torie">Adăugare călătorie</string>
    <string name="salvare">Salvare</string>
    <string name="nume_c_l_torie">Nume călătorie</string>
    <string name="minunatul_sejur">Minunatul sejur</string>
    <string name="destina_ie">Destinație</string>
    <string name="tipul_c_l_toriei">Tipul călătoriei</string>
    <string name="ie_ire_n_ora">Ieșire în oraș</string>
    <string name="vacan_la_mare">Vacanță la mare</string>
    <string name="excursie_la_munte">Excursie la munte</string>
    <string name="pre">Preț</string>
    <string name="euro">€</string>
    <string name="num_r">Număr</string>
    <string name="noteaz_experien_a">Notează experiența</string>
    <string name="f_o_fotografie">Fă o fotografie</string>
    <string name="fotografie_din_galerie">Fotografie din galerie</string>
    <string name="asociaz_o_fotografie_c_l_toriei">Asociază o fotografie călătoriei</string>
    <string name="alege_data">Alege data</string>
    <string name="dataselectat_2">DataSelectată2</string>
    <string name="data_de_sf_r_it">Data de sfârșit</string>
    <string name="dataselectat">DataSelectată</string>
    <string name="data_de_nceput">Data de început</string>
    <string name="anuleaz">Anulează</string>
    <string name="anulare">Anulare</string>
    <string name="salut">Salut</string>
    <string name="ultimele_noti_e">Ultimele notițe</string>
    <string name="numeutilizator">numeUtilizator</string>
    <string name="vezi_tot">Vezi tot</string>
    <string name="salutv">Salut,</string>
    <string name="paris">Paris</string>
    <string name="editare_c_l_torie">Editare călătorie</string>
    <string name="detalii_c_l_torie">Detalii călătorie</string>
    <string name="bine_ai_revenit">Bine ai revenit,</string>
    <string name="english_language">English Language</string>
    <string name="limba_rom_n">Limba română</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="deconectare">Deconectare</string>
    <string name="apas_pentru_deconectare">Apasă pentru deconectare</string>
</resources>
