<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.journal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.journal.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.journal.ui.about_us.about_us"
        android:label="@string/about_us"
        tools:layout="@layout/about_us_fragment" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.journal.ui.contact.contact"
        android:label="@string/contact"
        tools:layout="@layout/contact_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.journal.ui.Logout"
        android:label="@string/logout"
        tools:layout="@layout/logout_fragment" />



</navigation>